crates/nil-ffi/gen/libnil.h

typedef unsigned int RequestId;
/**
 * [`Client::cheat_set_max_silo_resources`](nil_client::Client::cheat_set_max_silo_resources)
 */
void nil_cheat_set_max_silo_resources(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_max_stone`](nil_client::Client::cheat_set_max_stone)
 */
void nil_cheat_set_max_stone(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_max_warehouse_resources`](nil_client::Client::cheat_set_max_warehouse_resources)
 */
void nil_cheat_set_max_warehouse_resources(RequestId request_id,
                                           const char *json_req);
/**
 * [`Client::cheat_set_max_wood`](nil_client::Client::cheat_set_max_wood)
 */
void nil_cheat_set_max_wood(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_resources`](nil_client::Client::cheat_set_resources)
 */
void nil_cheat_set_resources(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_stability`](nil_client::Client::cheat_set_stability)
 */
void nil_cheat_set_stability(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_stone`](nil_client::Client::cheat_set_stone)
 */
void nil_cheat_set_stone(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_wood`](nil_client::Client::cheat_set_wood)
 */
void nil_cheat_set_wood(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_skip_round`](nil_client::Client::cheat_skip_round)
 */
void nil_cheat_skip_round(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_spawn_bot`](nil_client::Client::cheat_spawn_bot)
 */
void nil_cheat_spawn_bot(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_spawn_city`](nil_client::Client::cheat_spawn_city)
 */
void nil_cheat_spawn_city(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_spawn_personnel`](nil_client::Client::cheat_spawn_personnel)
 */
void nil_cheat_spawn_personnel(RequestId request_id, const char *json_req);
/**
 * [`Client::create_remote_world`](nil_client::Client::create_remote_world)
 */
void nil_create_remote_world(RequestId request_id, const char *json_req);
/**
 * [`Client::create_user`](nil_client::Client::create_user)
 */
void nil_create_user(RequestId request_id, const char *json_req);
/**
 * [`Client::delete_remote_world`](nil_client::Client::delete_remote_world)
 */
void nil_delete_remote_world(RequestId request_id, const char *json_req);
/**
 * [`Client::forward_report`](nil_client::Client::forward_report)
 */
void nil_forward_report(RequestId request_id, const char *json_req);
/**
 * [`Client::get_academy_recruit_catalog`](nil_client::Client::get_academy_recruit_catalog)
 */
void nil_get_academy_recruit_catalog(RequestId request_id, const char *json_req);
/**
 * [`Client::get_armies`](nil_client::Client::get_armies)
 */
void nil_get_armies(RequestId request_id, const char *json_req);
/**
 * [`Client::get_army`](nil_client::Client::get_army)
 */
void nil_get_army(RequestId request_id, const char *json_req);
/**
 * [`Client::get_army_owner`](nil_client::Client::get_army_owner)
 */
void nil_get_army_owner(RequestId request_id, const char *json_req);
/**
 * [`Client::get_bot_coords`](nil_client::Client::get_bot_coords)
 */
void nil_get_bot_coords(RequestId request_id, const char *json_req);
/**
 * [`Client::get_chat_history`](nil_client::Client::get_chat_history)
 */
void nil_get_chat_history(RequestId request_id, const char *json_req);
/**
 * [`Client::get_cities`](nil_client::Client::get_cities)
 */
void nil_get_cities(RequestId request_id, const char *json_req);
/**
 * [`Client::get_city`](nil_client::Client::get_city)
 */
void nil_get_city(RequestId request_id, const char *json_req);
/**
 * [`Client::get_city_score`](nil_client::Client::get_city_score)
 */
void nil_get_city_score(RequestId request_id, const char *json_req);
/**
 * [`Client::get_continent_size`](nil_client::Client::get_continent_size)
 */
void nil_get_continent_size(RequestId request_id, const char *json_req);
/**
 * [`Client::get_idle_armies_at`](nil_client::Client::get_idle_armies_at)
 */
void nil_get_idle_armies_at(RequestId request_id, const char *json_req);
/**
 * [`Client::get_idle_armies_coords`](nil_client::Client::get_idle_armies_coords)
 */
void nil_get_idle_armies_coords(RequestId request_id, const char *json_req);
/**
 * [`Client::get_maneuver`](nil_client::Client::get_maneuver)
 */
void nil_get_maneuver(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player`](nil_client::Client::get_player)
 */
void nil_get_player(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player_coords`](nil_client::Client::get_player_coords)
 */
void nil_get_player_coords(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player_ids`](nil_client::Client::get_player_ids)
 */
void nil_get_player_ids(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player_maintenance`](nil_client::Client::get_player_maintenance)
 */
void nil_get_player_maintenance(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player_military`](nil_client::Client::get_player_military)
 */
void nil_get_player_military(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player_status`](nil_client::Client::get_player_status)
 */
void nil_get_player_status(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player_storage_capacity`](nil_client::Client::get_player_storage_capacity)
 */
void nil_get_player_storage_capacity(RequestId request_id, const char *json_req);
/**
 * [`Client::get_player_worlds`](nil_client::Client::get_player_worlds)
 */
void nil_get_player_worlds(RequestId request_id, const char *json_req);
/**
 * [`Client::get_precursor_coords`](nil_client::Client::get_precursor_coords)
 */
void nil_get_precursor_coords(RequestId request_id, const char *json_req);
/**
 * [`Client::get_prefecture_build_catalog`](nil_client::Client::get_prefecture_build_catalog)
 */
void nil_get_prefecture_build_catalog(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_bot`](nil_client::Client::get_public_bot)
 */
void nil_get_public_bot(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_bots`](nil_client::Client::get_public_bots)
 */
void nil_get_public_bots(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_cities`](nil_client::Client::get_public_cities)
 */
void nil_get_public_cities(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_city`](nil_client::Client::get_public_city)
 */
void nil_get_public_city(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_field`](nil_client::Client::get_public_field)
 */
void nil_get_public_field(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_fields`](nil_client::Client::get_public_fields)
 */
void nil_get_public_fields(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_player`](nil_client::Client::get_public_player)
 */
void nil_get_public_player(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_players`](nil_client::Client::get_public_players)
 */
void nil_get_public_players(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_precursor`](nil_client::Client::get_public_precursor)
 */
void nil_get_public_precursor(RequestId request_id, const char *json_req);
/**
 * [`Client::get_public_precursors`](nil_client::Client::get_public_precursors)
 */
void nil_get_public_precursors(RequestId request_id, const char *json_req);
/**
 * [`Client::get_rank`](nil_client::Client::get_rank)
 */
void nil_get_rank(RequestId request_id, const char *json_req);
/**
 * [`Client::get_ranking`](nil_client::Client::get_ranking)
 */
void nil_get_ranking(RequestId request_id, const char *json_req);
/**
 * [`Client::get_remote_world`](nil_client::Client::get_remote_world)
 */
void nil_get_remote_world(RequestId request_id, const char *json_req);
/**
 * [`Client::get_remote_world_limit`](nil_client::Client::get_remote_world_limit)
 */
void nil_get_remote_world_limit(RequestId request_id);
/**
 * [`Client::get_remote_world_limit_per_user`](nil_client::Client::get_remote_world_limit_per_user)
 */
void nil_get_remote_world_limit_per_user(RequestId request_id);
/**
 * [`Client::get_remote_worlds`](nil_client::Client::get_remote_worlds)
 */
void nil_get_remote_worlds(RequestId request_id);
/**
 * [`Client::get_round`](nil_client::Client::get_round)
 */
void nil_get_round(RequestId request_id, const char *json_req);
/**
 * [`Client::get_server_kind`](nil_client::Client::get_server_kind)
 */
void nil_get_server_kind(RequestId request_id);
/**
 * [`Client::get_stable_recruit_catalog`](nil_client::Client::get_stable_recruit_catalog)
 */
void nil_get_stable_recruit_catalog(RequestId request_id, const char *json_req);