crates/nil-ffi/gen/libnil.cs


        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_silo_resources", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_silo_resources(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_stone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_stone(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_warehouse_resources", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_warehouse_resources(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_wood", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_wood(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_resources", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_resources(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_stability", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_stability(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_stone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_stone(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_wood", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_wood(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_skip_round", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_skip_round(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_spawn_bot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_spawn_bot(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_spawn_city", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_spawn_city(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_spawn_personnel", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_spawn_personnel(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_create_remote_world", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_create_remote_world(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_create_user", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_create_user(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_delete_remote_world", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_delete_remote_world(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_forward_report", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_forward_report(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_academy_recruit_catalog", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_academy_recruit_catalog(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_armies", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_armies(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_army", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_army(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_army_owner", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_army_owner(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_bot_coords", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_bot_coords(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_chat_history", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_chat_history(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_cities", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_cities(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_city", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_city(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_city_score", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_city_score(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_continent_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_continent_size(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_idle_armies_at", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_idle_armies_at(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_idle_armies_coords", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_idle_armies_coords(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_maneuver", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_maneuver(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player_coords", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player_coords(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player_ids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player_ids(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player_maintenance", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player_maintenance(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player_military", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player_military(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player_status", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player_status(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player_storage_capacity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player_storage_capacity(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_player_worlds", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_player_worlds(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_precursor_coords", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_precursor_coords(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_prefecture_build_catalog", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_prefecture_build_catalog(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_bot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_bot(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_bots", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_bots(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_cities", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_cities(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_city", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_city(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_field", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_field(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_fields", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_fields(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_player", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_player(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_players", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_players(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_precursor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_precursor(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_public_precursors", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_public_precursors(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_rank", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_rank(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_ranking", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_ranking(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_remote_world", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_remote_world(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_remote_world_limit", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_remote_world_limit();

        [DllImport(__DllName, EntryPoint = "nil_get_remote_world_limit_per_user", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_remote_world_limit_per_user();

        [DllImport(__DllName, EntryPoint = "nil_get_remote_worlds", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_remote_worlds();

        [DllImport(__DllName, EntryPoint = "nil_get_round", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_round(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_server_kind", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_server_kind();

        [DllImport(__DllName, EntryPoint = "nil_get_stable_recruit_catalog", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_stable_recruit_catalog(byte* req);
